--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
 			<h3>A blog documenting the Energy Unit in grade 11 physics, taught by <a href="https://twitter.com/albertfong" target="_blank">Mr. Fong</a></h3>
 		</div>
 	</div>
-	<div id="blogs">
-		
-	</div>
-	<div id="posts">
-		
-	</div>
+	<div id="posts"></div>
 </body>
 </html>
