--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet">
 	<!-- jQuery 3.1 -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<script src="jquery-3.1.1.min.js"></script>
 	<!-- Custom JavaScript -->
 	<script src="script.js"></script>
 	<script src="posts.js"></script>
 	<meta name="viewport" content="width=device-width"/>
 </head>
 <body>
+	<!-- Facebook JavaScript SDK -->
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+
 	<div id="info">
 		<div class="center">
 			<h1>Energy E-Portfolio</h1>
@@ -22,5 +32,7 @@
 		</div>
 	</div>
 	<div id="posts"></div>
+	<!-- Comments -->
+	<div class="fb-comments" data-href="http://alan-ma.github.io/EnergyPortfolio" data-numposts="5"></div>
 </body>
 </html>
