--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 	</div>
 	<div id="posts"></div>
 	<!-- Comments -->
-	<div id="comments" class="fb-comments" data-href="https://alan-ma.github.io/EnergyPortfolio" data-numposts="5"></div>
+	<div id="comments">
+		<div class="fb-comments" data-href="https://alan-ma.github.io/EnergyPortfolio" data-numposts="5"></div>
+	</div>
 </body>
 </html>
