changed comments size

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div id="posts"></div>
 	<!-- Comments -->
 	<div id="comments">
-		<div class="fb-comments" data-href="https://alan-ma.github.io/EnergyPortfolio" data-numposts="5"></div>
+		<div class="fb-comments" data-href="https://alan-ma.github.io/EnergyPortfolio" data-width="900" data-numposts="5"></div>
 	</div>
 </body>
 </html>
