--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="script.js"></script>
 	<script src="posts.js"></script>
 	<meta name="viewport" content="width=device-width"/>
+	<meta charset="UTF-8">
 </head>
 <body>
 	<!-- Facebook JavaScript SDK -->
