hopefully it loads now
onload moved to body

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="viewport" content="width=device-width"/>
 	<meta charset="UTF-8">
 </head>
-<body>
+<body onload="main()">
 	<!-- Facebook JavaScript SDK -->
 	<div id="fb-root"></div>
 	<script>(function(d, s, id) {
@@ -34,7 +34,7 @@
 	<div id="posts"></div>
 	<!-- Comments -->
 	<div id="comments">
-		<div class="fb-comments" data-href="https://alan-ma.github.io/EnergyPortfolio" data-width="900" data-numposts="5" onload="main()"></div>
+		<div class="fb-comments" data-href="https://alan-ma.github.io/EnergyPortfolio" data-width="900" data-numposts="5"></div>
 	</div>
 </body>
 </html>
